add name normalization class, db seed data, refactor dto classes, and fix tests for more coverage